--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "morsechatbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Easybot is a pet project for automatic generation of Dialogflow chatbots using OpenAI-Pinecone stack",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,5 +27,17 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IuriiD/easybot.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/IuriiD/easybot/issues"
+  },
+  "homepage": "https://github.com/IuriiD/easybot#readme"
 }
